completed review project

--- a/color_fliper/index.html
+++ b/color_fliper/index.html
@@ -18,6 +18,9 @@
             <li>
                <a href="hex.html">Hex</a>
             </li>
+            <li>
+               <a  href="rgb.html">rgb</a>
+            </li>
          </ul>
       </div>
    </nav>
