--- a/color_fliper/rgb.html
+++ b/color_fliper/rgb.html
@@ -16,10 +16,10 @@
                <a href="index.html">Simple</a>
             </li>
             <li>
-               <a style="color: rgb(148, 133, 0);" href="hex.html">Hex</a>
+               <a href="hex.html">Hex</a>
             </li>
             <li>
-               <a  href="rgb.html">rgb</a>
+               <a style="color: rgb(148, 133, 0);" href="rgb.html">rgb</a>
             </li>
          </ul>
       </div>
@@ -34,6 +34,6 @@
    </main>
 
 
-   <script src="hex.js"></script>
+   <script src="rgb.js"></script>
 </body>
 </html>
